Version 1.0 2005-XX-XX
======================
* Spinlock rewrite: This time SMP should work. Really.
* Sends multiple packets (if driver supports it) in each send
  operation for better efficiency
* Most of the functionality of loader is moved to userspace tool
  loadndisdriver so it is more robust
* Encryption info is restored during disassociation; this is useful if
  ad-hoc mode is used as psuedo master mode
* MAC address can be set in .conf files (in /etc/ndiswrapper/<driver>
  directory) or changed at any time (with 'ifconfig hw class' command)
* Association and disassociation should happen quickly especially with
  wpa_supplicant
* Compilation issues with old gcc and sed are fixed
* Kernel crash when ejecting cards with cardctl in 2.4 kernels is
  fixed

Version 0.12 2004-11-25
=======================
* Works with Preempt and SMP kernels.
* WPA-RADIUS is supported.
* Compiles with kernels > 2.6.9 and swsuspend2
* USB cards are reset during initialization; they should work without
  having to reset explicitly
* Some crashes in USB, especially during initialization, are fixed.
* WEP key setting problems fixed.
* Check for 4K stack size during compilation and issue warning if necessary.
* Bug fixes

Version 0.11 2004-10-08
=======================
* Compilation issues with USB are fixed.
* WPA issues fixed.
* Older Prism USB devices (e.g., Dlink DWL-122, Netgear MA111)  supported.
* Suspend/resume of devices with no power management (e.g., TI) fixed.
* ndiswrapper script has an option "-d" to install drivers for a
  different device (if the chipset is same); the script also installs
  drivers properly when the CopyFiles section has commented out file names.
* ndiswrapper script lists USB devices and reports status of drivers
  with more understandable messages.
* Many bug fixes and improvements

Version 0.10 2004-08-20
=======================
* Centrino 2200: works in ad-hoc mode, keyboard doesn't lock even