@@ -400,17 +400,14 @@ typedef struct wrap_spinlock *KSPIN_LOCK;
 
 #else
 
-typedef union {
-	spinlock_t spinlock;
-	ULONG_PTR ntoslock;
-} KSPIN_LOCK;
+typedef spinlock_t KSPIN_LOCK;
 struct wrap_spinlock {
-	KSPIN_LOCK lock;
+	KSPIN_LOCK spinlock;
 	KIRQL use_bh;
 };
 
-#define WRAP_SPINLOCK(lock) &((lock)->lock.spinlock)
-#define K_SPINLOCK(lock) &(lock)->spinlock
+#define WRAP_SPINLOCK(lock) &((lock)->spinlock)
+#define K_SPINLOCK(lock) &(lock)
 #endif
 
 typedef CHAR KPROCESSOR_MODE;
@@ -856,7 +853,7 @@ void dump_bytes(const char *where, const u8 *ip);
 static inline void wrap_spin_lock_init(struct wrap_spinlock *lock)
 {
 #ifndef CONFIG_DEBUG_SPINLOCK
-	check_spin_lock_size(lock->lock);
+	check_spin_lock_size(lock);
 #endif
 	spin_lock_init(WRAP_SPINLOCK(lock));
 	lock->use_bh = 0;
