@@ -1,11 +1,24 @@
+# Define ndiswrapper_version only if it is not already defined.
+%{!?ndiswrapper_version: %define ndiswrapper_version 1.0rc1}
+%{!?ndiswrapper_release: %define ndiswrapper_release 1}
+
+# Define kernel version if not already defined
+%{!?kernel: %define kernel %(uname -r)}
+%{!?ksrc: %define ksrc /lib/modules/%{kernel}/build}
+%{!?_inst_dir: %define _inst_dir /lib/modules/%{kernel}/misc}
+
+%define _sbinrootdir /sbin
+
 Summary: ndiswrapper allows you to use windows XP drivers for that WLAN card without proper Linux drivers.
 Name: ndiswrapper
-Version: NDISWRAPPER_VERSION
-Release: 1
+Version: %{ndiswrapper_version}
+Release: %{ndiswrapper_release}
 License: GPL
 Group: System Environment/Base
 URL: http://ndiswrapper.sourceforge.net
 Source: %{name}-%{version}.tar.gz
+BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
+BuildRequires: %{ksrc}/Makefile
 
 %description
 Some wireless LAN vendors refuse to release hardware specifications or
@@ -15,50 +28,62 @@ hardware with Linux by means of a loadable kernel module that "wraps
 around" NDIS (Windows network driver API) drivers.  This rpm contains
 just the userspace tools. You will also need the kernel module rpm.
 
-%package kernel-%(uname -r)
+%package -n kernel-module-%{name}-%{kernel}
 Summary: Ndiswrapper kernel module
 Group: System Environment/Base
-Requires: kernel = %(uname -r), ndiswrapper = NDISWRAPPER_VERSION
+Requires: /boot/vmlinuz-%{kernel}, modutils
+Requires: %{name} = %{version}-%{release}
+BuildRequires: %{ksrc}/Makefile
 
-%description kernel-%(uname -r)
+%description -n kernel-module-%{name}-%{kernel}
 Kernel module for ndiswrapper.
-
 
 %prep
 %setup -q
 
-
 %build
-make all
-
+make all KVERS=%{kernel} KSRC=%{ksrc}
 
 %install
-make install
 
+%define inst_dir $RPM_BUILD_ROOT%{_inst_dir}
+%define sbinrootdir $RPM_BUILD_ROOT%{_sbinrootdir}
+
+# This defines makeinstall macro for distributions that don't have it.
+# I believe that SuSE doesn't use it.
+%{!?makeinstall: %define makeinstall make DESTDIR=$RPM_BUILD_ROOT install }
+
+rm -rf $RPM_BUILD_ROOT
+%makeinstall INST_DIR=%{inst_dir} KVERS=%{kernel} KSRC=%{ksrc} sbinrootdir=%{sbinrootdir}
 
 %clean
 rm -rf $RPM_BUILD_ROOT
 
-
 %files
-%undefine __check_files
 %defattr(0755,root,root)
-/sbin/loadndisdriver
-/usr/sbin/ndiswrapper
+%{_sbinrootdir}/loadndisdriver
+%{_sbindir}/ndiswrapper*
+%{_mandir}/man8/*
 %doc README AUTHORS ChangeLog INSTALL
 
-%files kernel-%(uname -r)
-/lib/modules/%(uname -r)/misc/ndiswrapper.*
+%files -n kernel-module-%{name}-%{kernel}
+%{_inst_dir}/ndiswrapper.*
 
-%post kernel-%(uname -r)
-/sbin/depmod -a
+%post -n kernel-module-%{name}-%{kernel}
+if [ "`uname -r`" = "%{kernel}" ] ; then
+  depmod -a >/dev/null 2>&1 || :
+fi
 
-
-%postun kernel-%(uname -r)
-/sbin/depmod -a
-
+%postun -n kernel-module-%{name}-%{kernel}
+if [ "`uname -r`" = "%{kernel}" ] ; then
+  depmod -a >/dev/null 2>&1 || :
+fi
 
 %changelog
+* Tue Jan  4 2005 David Kaplan <dmk@localhost.localdomain> - 
+- Updated spec file so that it is closer to kernel module standard spec
+- Made ndiswrapper_version a configurable macro
+
 * Tue Feb  3 2004  <abennett@olin.edu> - 
 - Initial build.
 
